PyMaker/datas/object2/RawHTML/i6701/Python_DOC_referPages.invalid-syntax-error-in-python-code-i-copied-from-the-internet-to-read-hyperspec.txt
<div class="post-text" itemprop="text">
<p>this is the part of code that I copied in my program. my python is version 3.6. and used Ipython console to run it. but there is this error that I can't understand. could you please help me?</p>
<pre><code>from spectral import *
img = open_image('92AV3C.lan')
print(img)
img.__class__
DataSource: 'D:/somayeh- work docs/test program with python/92AV3C.lan'
    # Rows:            145
    # Samples:         145
    # Bands:           220
Interleave:        BIL
Quantization:   16 bits
Data format:     int16

img.shape(145, 145, 220)
pixel = img[50,100]

pixel.shape(220,)

band6 = img[:,:,5]

band6.shape(145, 145, 1)
</code></pre>
<hr/>
<p>error : Quantization:   16 bit
                         ^
SyntaxError: invalid syntax</p>
</div>
<div class="post-text" itemprop="text">
<p>You appear to be reading <a href="http://www.spectralpython.net/fileio.html" rel="nofollow noreferrer">this page of the Spectral Python documentation</a>.</p>
<p>They are showing an <em>interactive Python session</em>, including output of the commands entered. You copied the <em>print result</em>, there to be part of a demo.</p>
<p>The printed output is not Python syntax. Stick to the lines starting with <code>In [&lt;digit&gt;]:</code>.</p>
<p>For the first and second examples, together:</p>
<pre><code>In [1]: from spectral import *

In [2]: img = open_image('92AV3C.lan')

In [3]: img.__class__
Out[3]: spectral.io.bilfile.BilFile

In [4]: print img
    Data Source:   '/home/thomas/spectral_data/92AV3C.lan'
    # Rows:            145
    # Samples:         145
    # Bands:           220
    Interleave:        BIL
    Quantization:  16 bits
    Data format:     int16

In [5]: img.shape
Out[5]: (145, 145, 220)

In [6]: pixel = img[50,100]

In [7]: pixel.shape
Out[7]: (220,)

In [8]: band6 = img[:,:,5]

In [9]: band6.shape
Out[9]: (145, 145, 1)
</code></pre>
<p>adjusted for Python 3, the code executed is</p>
<pre><code>from spectral import *
img = open_image('92AV3C.lan')
img.__class__
print(img)
img.shape
pixel = img[50,100]
pixel.shape
band6 = img[:,:,5]
band6.shape
</code></pre>
<p>Most of this is just producing extra output aimed at helping you to understand what kind of objects are being produced and how they model data.</p>
</div>
<span class="comment-copy">It's a <code>SyntaxError</code>... The syntax is not correct. Read more about python <a href="https://docs.python.org/3/tutorial/introduction.html" rel="nofollow noreferrer">here</a></span>
<span class="comment-copy">The code includes the output of the <code>print()</code> call, by the looks of it. It's not formatted for easy copying.</span>
